# CT_ComparadorDeEquipos

./: .gitignore  README.md  ctonline-scraper.bat  opencode.json  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  show-schema.py
scripts/: show_schema.py
src/: __main__.py  api.py  cli.py  client.py  constants.py  exporter.py  parser.py  spec_parsing.py
src/requirements/: __init__.py  classifier.py  comparator.py  cpu_db.py  extractor.py  heuristics.py  models.py
tests/: test_extract_processor.py
web-react/: index.html  package-lock.json
web-react/public/: comparacion-all-in-one.json  comparacion-laptops.json
web-react/src/: App.css  App.jsx  index.css
web-react/src/components/: Filters.jsx  Header.jsx  ProductCard.jsx  RequirementsPanel.jsx  StatsBar.jsx
